--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
           <a href="#image-tools" class="text-gray-700 hover:text-blue-600 px-3 py-2 text-sm font-medium">Image Tools</a>
           <a href="#guides" class="text-gray-700 hover:text-blue-600 px-3 py-2 text-sm font-medium">Guides</a>
           <a href="#releases" class="text-gray-700 hover:text-blue-600 px-3 py-2 text-sm font-medium">Releases</a>
+          <a href="https://feedio.pro/product/upgrade.html" class="text-gray-700 hover:text-blue-600 px-3 py-2 text-sm font-medium">Product</a>
+          <a href="https://feedio.pro/ChangeLicense.html" class="text-gray-700 hover:text-blue-600 px-3 py-2 text-sm font-medium">Change License</a>
           <a href="#download" class="download-btn inline-flex items-center px-4 py-2 text-sm font-medium rounded-md shadow-sm text-white gradient-bg focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">Download Now</a>
         </div>
         <div class="flex md:hidden">
@@ -44,6 +46,8 @@
         <a href="#image-tools" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100">Image Tools</a>
         <a href="#guides" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100">Guides</a>
         <a href="#releases" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100">Releases</a>
+        <a href="https://feedio.pro/product/upgrade.html" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100">Product</a>
+        <a href="https://feedio.pro/ChangeLicense.html" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100">Change License</a>
         <a href="#download" class="block px-3 py-2 rounded-md text-base font-medium text-white gradient-bg">Download</a>
       </div>
     </div>
@@ -237,7 +241,7 @@
                   <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhPIhxAKeMSX1q1pFBqIws2yKttdDVo9CJivTXgcw7yo8Y6rtTqnGlaMBxIW71fmjJTz9ItGlkbX96ZiqNrt0focTMWooCsx6tEz7NmLcJDMyPYhmnNPFsQydaRmiLK8AjFB8xbw_A-Scky_omymD4Yu9sjviL87Ebb2TSJ4SclkoxlWBfGXktlE1e685iM" alt="Feedio Logo" class="inline h-6 w-auto relative -top-1">
                   untuk Windows
                 </h3>
-                <p class="mt-1 text-gray-600">Versi 1.1.18 (Terbaru)</p>
+                <p class="mt-1 text-gray-600">Versi Terbaru (Auto Update)</p>
               </div>
             </div>
             <ul class="mt-6 space-y-4">
@@ -251,8 +255,8 @@
               <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Private account: Firefly & Google Ultra</p></li>
             </ul>
             <div class="mt-8">
-              <a href="https://github.com/inc-okla/Feedio/releases/download/1.1.18/FeedioSetup.exe" class="download-btn w-full flex items-center justify-center px-8 py-4 text-base font-medium rounded-md text-white gradient-bg md:text-lg"><i class="fas fa-download mr-2"></i> Free Download (64-bit)</a>
-              <p class="mt-2 text-center text-sm text-gray-600">Windows 10/11 64-bit. RAM min 4GB, disarankan 8GB.</p>
+              <a href="https://github.com/inc-okla/Feedio/releases/latest/download/FeedioSetup.exe" class="download-btn w-full flex items-center justify-center px-8 py-4 text-base font-medium rounded-md text-white gradient-bg md:text-lg"><i class="fas fa-download mr-2"></i> Free Download (64-bit)</a>
+              <p class="mt-2 text-center text-sm text-gray-600">Windows 10/11 64-bit. RAM min 4GB, disarankan 8GB. Auto update ke versi terbaru.</p>
             </div>
           </div>
         </div>
@@ -267,7 +271,7 @@
                   <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhPIhxAKeMSX1q1pFBqIws2yKttdDVo9CJivTXgcw7yo8Y6rtTqnGlaMBxIW71fmjJTz9ItGlkbX96ZiqNrt0focTMWooCsx6tEz7NmLcJDMyPYhmnNPFsQydaRmiLK8AjFB8xbw_A-Scky_omymD4Yu9sjviL87Ebb2TSJ4SclkoxlWBfGXktlE1e685iM" alt="Feedio Logo" class="inline h-6 w-auto relative -top-1">
                   untuk Linux
                 </h3>
-                <p class="mt-1 text-gray-600">Versi 1.0.3 (Terbaru)</p>
+                <p class="mt-1 text-gray-600">Versi Terbaru (Auto Update)</p>
               </div>
             </div>
             <ul class="mt-6 space-y-4">
@@ -281,8 +285,8 @@
               <li class="flex items-start"><i class="fas fa-check-circle text-green-500 mr-2"></i><p class="text-gray-700">Private account: Firefly & Google Ultra</p></li>
             </ul>
             <div class="mt-8">
-              <a href="https://github.com/inc-okla/Feedio/releases/download/1.0.3/FeedioLinux.deb" class="download-btn w-full flex items-center justify-center px-8 py-4 text-base font-medium rounded-md text-white bg-green-600 hover:bg-green-700 md:text-lg"><i class="fas fa-download mr-2"></i> Download Now (64-bit)</a>
-              <p class="mt-2 text-center text-sm text-gray-600">Ubuntu 20.04+, Debian, Arch 64-bit. RAM min 4GB, disarankan 8GB.</p>
+              <a href="https://github.com/inc-okla/Feedio/releases/latest/download/FeedioLinux.deb" class="download-btn w-full flex items-center justify-center px-8 py-4 text-base font-medium rounded-md text-white bg-green-600 hover:bg-green-700 md:text-lg"><i class="fas fa-download mr-2"></i> Download Now (64-bit)</a>
+              <p class="mt-2 text-center text-sm text-gray-600">Ubuntu 20.04+, Debian, Arch 64-bit. RAM min 4GB, disarankan 8GB. Auto update ke versi terbaru.</p>
             </div>
           </div>
         </div>
@@ -625,6 +629,8 @@
         <div class="px-5 py-2"><a href="#download" class="text-base text-gray-500 hover:text-gray-900">Download</a></div>
         <div class="px-5 py-2"><a href="#guides" class="text-base text-gray-500 hover:text-gray-900">Guides</a></div>
         <div class="px-5 py-2"><a href="#releases" class="text-base text-gray-500 hover:text-gray-900">Releases</a></div>
+        <div class="px-5 py-2"><a href="https://feedio.pro/product/upgrade.html" class="text-base text-gray-500 hover:text-gray-900">Product</a></div>
+        <div class="px-5 py-2"><a href="https://feedio.pro/ChangeLicense.html" class="text-base text-gray-500 hover:text-gray-900">Change License</a></div>
         <div class="px-5 py-2"><a href="#" class="text-base text-gray-500 hover:text-gray-900">Privacy</a></div>
         <div class="px-5 py-2"><a href="#" class="text-base text-gray-500 hover:text-gray-900">Terms</a></div>
       </nav>
