--- a/APIs.html
+++ b/APIs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feedio APIs - Official Page</title>
+    <title>APIs - Official Feedio</title>
     <link rel="icon" href="https://blogger.googleusercontent.com/img/a/AVvXsEhpGLVexj0fNurWL6o_qo29hJGNYg3KRK3yX3A6r2NMMXGM8Wxo3a8UNdd974sUQChPEZlY9UeIWQUdeuLp9CVdSJ4cKusuxphAlz3fI1UDMKcTpizCtUymtipijkVJrTd7XCx086iPEAmZB8u6KlOfhOhCbe-N7wIxbfffz_BdDjkXpssvD9Ep86OH9P_H" type="image/png">    
     <style>
         :root {
@@ -335,7 +335,12 @@
     </header>
 
     <section class="hero">
-        <h1>Otomatisasi API Key untuk Microstock</h1>
+        <h1>
+            Otomatisasi API Key untuk 
+            <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhPIhxAKeMSX1q1pFBqIws2yKttdDVo9CJivTXgcw7yo8Y6rtTqnGlaMBxIW71fmjJTz9ItGlkbX96ZiqNrt0focTMWooCsx6tEz7NmLcJDMyPYhmnNPFsQydaRmiLK8AjFB8xbw_A-Scky_omymD4Yu9sjviL87Ebb2TSJ4SclkoxlWBfGXktlE1e685iM" 
+                alt="Microstock" 
+                style="height: 40px; vertical-align: middle; margin-bottom: 9px;">
+        </h1>
         <p>
             Solusi otomatis penghasil API Key yang menghubungkan kreativitas Anda dengan Feedio Bot. 
             Mendukung Topaz, Firefly, Flow Ultra, dan Google Image dalam satu sistem yang efisien.
@@ -391,7 +396,13 @@
     <section id="about" class="content-section">
         <div class="section-center">
             <div class="section-header">
-                <h2>Apa Itu Feedio APIs?</h2>
+                <h2>
+                    Apa Itu 
+                    <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhPIhxAKeMSX1q1pFBqIws2yKttdDVo9CJivTXgcw7yo8Y6rtTqnGlaMBxIW71fmjJTz9ItGlkbX96ZiqNrt0focTMWooCsx6tEz7NmLcJDMyPYhmnNPFsQydaRmiLK8AjFB8xbw_A-Scky_omymD4Yu9sjviL87Ebb2TSJ4SclkoxlWBfGXktlE1e685iM" 
+                        alt="Feedio Logo" 
+                        style="height: 32px; vertical-align: middle; margin-bottom: 4px;"> 
+                    APIs?
+                </h2>
                 <p>Mesin di balik otomatisasi konten kreatif Anda</p>
             </div>
             <div class="grid-split">
@@ -468,10 +479,15 @@
 
     <footer>
         <div class="section-center">
-            <h2 style="margin-bottom: 10px;">FEEDIO APIs</h2>
+            <h2 style="margin-bottom: 10px;">
+                <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhhvP6pgETkPNJe2AT6utIKqAKwYYVywCjnLIxC18X-YNMG7qtLFQWoYVuWuegreDfL_GIZyWG-t1ClUHUd_jF1afxWCGPFfRLJaEftDcRlD7o50093ZMambTtgGCjnWpth-nWNqDrIIHcvwC6vT22h1WNHA1W-uetp7pJMAQrzIS_CAC2C7SgYgdYNWR6P" 
+                     alt="Feedio Logo" 
+                     style="height: 26px; "> 
+                APIs
+            </h2>
             <p>Empowering Microstock Creators with Automation.</p>
             <br>
-            <p style="font-size: 0.8rem; opacity: 0.6;">&copy; 2025 Feedio APIs. All Rights Reserved.</p>
+            <p style="font-size: 0.8rem; opacity: 0.6;">&copy; 2026 Feedio APIs. All Rights Reserved.</p>
         </div>
     </footer>
 
