--- a/docs.html
+++ b/docs.html
@@ -518,7 +518,7 @@
                     <li><button onclick="switchTab('google-image', this)" class="nav-btn">Google Image Labs</button></li>
                     <li><button onclick="switchTab('remove-background', this)" class="nav-btn">Remove Background & Upscale</button></li>
                     <li><button onclick="switchTab('topaz-upscaler', this)" class="nav-btn">Topaz Upscaler</button></li>
-                    <li><button onclick="switchTab('extension-feedio', this)" class="nav-btn">Extension Feedio</button></li>
+                    <li><button onclick="switchTab('extension-feedio', this)" class="nav-btn">Veo Free</button></li>
                     <li><button onclick="switchTab('license', this)" class="nav-btn">License & Copyright</button></li>
                     <li><button onclick="switchTab('trial-mode', this)" class="nav-btn">Trial Mode</button></li>
                 </ul>
