--- a/docs.html
+++ b/docs.html
@@ -903,7 +903,7 @@
             </div>
 
             <div id="extension-feedio" class="content-section">
-                <h1>Extension Feedio</h1>
+                <h1>Veo Free Unlock</h1>
                 
                 <div id="extension-login-gate">
                     <div class="license-card">
