--- a/docs.html
+++ b/docs.html
@@ -908,10 +908,10 @@
                 <div id="extension-login-gate">
                     <div class="license-card">
                         <h3 style="margin-top: 0; text-align: center;">Akses Tutorial Eksklusif</h3>
-                        <p style="text-align: center; font-size: 0.9rem; color: var(--text-secondary); margin-bottom: 1.5rem;">Silakan masukkan Machine ID Feedio Anda untuk memvalidasi status langganan aktif.</p>
+                        <p style="text-align: center; font-size: 0.9rem; color: var(--text-secondary); margin-bottom: 1.5rem;">Silakan masukkan ID Machine Feedio Anda untuk memvalidasi status.</p>
                         
                         <div class="form-group">
-                            <label class="form-label">Machine ID Feedio</label>
+                            <label class="form-label">ID Machine Feedio</label>
                             <input type="text" id="accessMachineId" class="form-input" placeholder="Masukkan ID Machine Anda" required>
                         </div>
                         
@@ -961,7 +961,7 @@
                     </div>
 
                     <div class="placeholder-box">
-                        <span class="placeholder-text">[FOTO: Tutorial Visual Pemasangan Load Unpacked]</span>
+                        <span class="placeholder-text">[Video: Tutorial Visual Comming Soon]</span>
                     </div>
                 </div>
             </div>
@@ -976,7 +976,7 @@
                 <div class="warning-box">
                     <strong>PERINGATAN KERAS:</strong>
                     <p style="margin-top: 0.5rem; margin-bottom: 0;">
-                        Dilarang keras memperjualbelikan ulang, mendistribusikan, memodifikasi, atau membajak lisensi dan perangkat lunak Feedio tanpa izin tertulis dari Feedio Studio. Segala bentuk pelanggaran hak cipta akan diproses secara hukum dan dapat dikenakan sanksi pidana sesuai dengan Undang-Undang Hak Cipta dan Peraturan Perundang-undangan yang berlaku di wilayah hukum terkait.
+                        Dilarang keras memperjualbelikan ulang, mendistribusikan, memodifikasi, atau membajak lisensi dan perangkat lunak Feedio tanpa izin tertulis dari Feedio Studio. Segala bentuk pelanggaran hak cipta akan diproses secara hukum dan dapat dikenakan sanksi pidana sesuai dengan Undang-Undang Hak Cipta No. 28 Tahun 2014: Mengatur perlindungan hak cipta, termasuk hak ekonomi untuk penggunaan komersial.Sanksi: Pelanggaran hak cipta digital bisa berujung pidana penjara (hingga 3 tahun) dan denda (hingga Rp 500 juta atau lebih untuk kasus berat seperti pembajakan).  dan Peraturan Perundang-undangan yang berlaku di wilayah hukum terkait.
                     </p>
                 </div>
 
