--- a/docs.html
+++ b/docs.html
@@ -969,18 +969,25 @@
                     
                     <h3>1. Persiapan Akun</h3>
                     <ul>
-                        <li>Daftar ke akun <strong>Gemini Enterprise</strong> untuk mendapatkan akses Veo <code>Gemini Enterprise</code>.</li>
+                        <li>Daftar ke akun <strong>Gemini</strong> untuk mendapatkan akses Veo di<code>Gemini Enterprise</code> secara gratis.</li>
                         <li>Ambil paket <strong>Business Edition</strong> untuk mengclaim gemini secara gratis dan <strong>Mulai Uji Coba Gratis 30 Hari</strong>.</li>
-                        <li>Daftar menggunakan Email Mask bisa menggunakan <code>https://relay.firefox.com/</code> generate mask dan daftarkan email tersebut ke Gemini Enterprise</li>
+                        <li>Daftar menggunakan Email Mask bisa menggunakan <code>https://relay.firefox.com/</code> generate mask dan daftarkan email tersebut lalu daftarkan ke Gemini Enterprise. nanti akan mendapatkan kode aktivasi silahkan masukan kode yang dikirimkan ke Email yang terhubung dengan Relay Firefox</li>
                     </ul>
 
                     <div class="success-box" style="background-color: rgba(16, 185, 129, 0.1); border-left: 4px solid var(--success-color); padding: 1rem; margin: 1rem 0; border-radius: 0 4px 4px 0;">
-                        <strong>BERHASIL:</strong> Akun Gemini Enterprise sudah didapatkan. bisa akses Veo3 secara gratis tanpa watermark.
+                        <strong>BERHASIL:</strong> Akun Gemini Enterprise sudah didapatkan. kamu bisa akses Veo3 secara gratis tanpa watermark.
                     </div>
 
                     <div class="placeholder-box">
                         <span class="placeholder-text">[Video: Tutorial Visual Comming Soon]</span>
                     </div>
+
+                    <h3>2. Pengoperasian Workflow pada Extension</h3>
+                    <ul>
+                        <li>Masuk ke akun <strong>Gemini</strong> yang sudah didaftarkan sebelumnya<code>Gemini Enterprise</code> secara gratis.</li>
+                        <li>Buka Extension yang sudah terpasang. isikan prompt yang akan di proses kemudian <strong>Hapus History Pesan</strong> sebelum menjalankan Extension <strong>Wajib</strong>.</li>
+                        <li>Jalankan Extention maka semua proses akan berjalan secara Otomatis</li>
+                    </ul>
                     
                 </div>
             </div>
