--- a/docs.html
+++ b/docs.html
@@ -989,6 +989,10 @@
                         <li>Jalankan Extention maka semua proses akan berjalan secara Otomatis</li>
                     </ul>
                     
+                    <div class="warning-box">
+                        <strong>PERHATIAN:</strong> Meskipun gratis, layanan ini akan berubah seiring dengan peraturan dari <strong>Google.</strong> dan Extention tidak ada update secara berkala.
+                    </div>
+                                       
                 </div>
             </div>
 
