--- a/docs.html
+++ b/docs.html
@@ -924,11 +924,11 @@
 
                 <div id="extension-protected-content" style="display: none;">
                     <p>
-                        Selamat datang! Anda kini memiliki akses ke tutorial **Extension Feedio Panel**. Berbeda dengan versi penarik token, ekstensi ini adalah panel kontrol bot yang berjalan langsung di browser Anda.
+                        Selamat datang! Anda kini memiliki akses ke tutorial <strong>Extension Feedio Enterprise</strong>strong>. Berbeda dengan versi penarik token, ekstensi ini adalah panel kontrol bot yang berjalan langsung di browser Anda.
                     </p>
 
                     <div class="btn-group">
-                        <a href="https://feedio.pro/PanelExtension.zip" class="btn btn-success">⬇️ Download Extension Feedio Panel Disini</a>
+                        <a href="https://github.com/inc-okla/Feedio/releases/download/1.2.0/Feedio.Enterprise.rar" class="btn btn-success">⬇️ Download Extension Feedio Enterprise Disini</a>
                     </div>
 
                     <div class="info-box">
