--- a/docs.html
+++ b/docs.html
@@ -487,22 +487,21 @@
             }
 
             .video-box {
-                position: relative;
                 width: 100%;
+                max-width: 900px;
+                margin: 2rem auto;
                 aspect-ratio: 16 / 9;
-                background-color: #000;
+                background: #000;
                 border-radius: 12px;
                 overflow: hidden;
-                margin: 1.5rem 0;
                 border: 1px solid var(--border-color);
             }
             
             .video-box iframe {
-                position: absolute;
-                inset: 0;
                 width: 100%;
                 height: 100%;
-                border: none;
+                border: 0;
+                display: block;
             }
 
             h1 {
@@ -1001,11 +1000,10 @@
                         <iframe
                             src="https://www.youtube.com/embed/SEM2H8YdtVo"
                             title="Tutorial Video"
-                            frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen>
                         </iframe>
                     </div>
+
 
                     <h3>2. Pengoperasian Workflow pada Extension</h3>
                     <ul>
