--- a/docs.html
+++ b/docs.html
@@ -486,10 +486,13 @@
                 flex: 1;
             }
 
+            .video-full-wrapper {
+                width: 100%;
+                margin: 2rem 0;
+            }
+            
             .video-box {
                 width: 100%;
-                max-width: 900px;
-                margin: 2rem auto;
                 aspect-ratio: 16 / 9;
                 background: #000;
                 border-radius: 12px;
@@ -996,14 +999,15 @@
                         <strong>BERHASIL:</strong> Akun Gemini Enterprise sudah didapatkan. kamu bisa akses Veo3 secara gratis tanpa watermark.
                     </div>
 
-                    <div class="video-box">
-                        <iframe
-                            src="https://www.youtube.com/embed/SEM2H8YdtVo"
-                            title="Tutorial Video"
-                            allowfullscreen>
-                        </iframe>
+                    <div class="video-full-wrapper">
+                        <div class="video-box">
+                            <iframe
+                                src="https://www.youtube.com/embed/SEM2H8YdtVo"
+                                title="Tutorial Video"
+                                allowfullscreen>
+                            </iframe>
+                        </div>
                     </div>
-
 
                     <h3>2. Pengoperasian Workflow pada Extension</h3>
                     <ul>
