--- a/docs.html
+++ b/docs.html
@@ -488,12 +488,14 @@
 
             .video-full-wrapper {
                 width: 100%;
+                max-width: 900px; /* Samakan dengan max-width .content-section */
                 margin: 2rem 0;
             }
             
             .video-box {
+                position: relative;
                 width: 100%;
-                aspect-ratio: 16 / 9;
+                aspect-ratio: 16 / 9; /* Menjaga proporsi video */
                 background: #000;
                 border-radius: 12px;
                 overflow: hidden;
@@ -501,10 +503,12 @@
             }
             
             .video-box iframe {
+                position: absolute;
+                top: 0;
+                left: 0;
                 width: 100%;
                 height: 100%;
                 border: 0;
-                display: block;
             }
 
             h1 {
@@ -1002,8 +1006,9 @@
                     <div class="video-full-wrapper">
                         <div class="video-box">
                             <iframe
-                                src="https://www.youtube.com/embed/SEM2H8YdtVo"
+                                src="https://www.youtube.com/embed/KODE_VIDEO_DISINI"
                                 title="Tutorial Video"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen>
                             </iframe>
                         </div>
