--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a href="#image-tools" class="text-gray-700 hover:text-blue-600 px-3 py-2 text-sm font-medium">Image Tools</a>
           <a href="#guides" class="text-gray-700 hover:text-blue-600 px-3 py-2 text-sm font-medium">Guides</a>
           <a href="#releases" class="text-gray-700 hover:text-blue-600 px-3 py-2 text-sm font-medium">Releases</a>
-          <a href="https://feedio.pro/product/upgrade" class="text-gray-700 hover:text-blue-600 px-3 py-2 text-sm font-medium">Product</a>
+          <!-- <a href="https://feedio.pro/product/upgrade" class="text-gray-700 hover:text-blue-600 px-3 py-2 text-sm font-medium">Product</a> -->
           <a href="https://feedio.pro/ChangeLicense.html" class="text-gray-700 hover:text-blue-600 px-3 py-2 text-sm font-medium">Change License</a>
           <a href="#download" class="download-btn inline-flex items-center px-4 py-2 text-sm font-medium rounded-md shadow-sm text-white gradient-bg focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">Download Now</a>
         </div>
