--- a/product/upgrade.html
+++ b/product/upgrade.html
@@ -12,10 +12,11 @@
     <!-- =============================== -->
     <!-- MIDTRANS SANDBOX SNAP.JS (WAJIB) -->
     <!-- =============================== -->
-    <script 
-        src="https://app.sandbox.midtrans.com/snap/snap.js" 
-        data-client-key="SB-Mid-client-eOnYPagNOzbyuYXy">
+    <script
+      src="https://app.midtrans.com/snap/snap.js"
+      data-client-key="Mid-client-9AXeJVf3fH55ltpR">
     </script>
+
     <!-- =============================== -->
 
     <script>
